[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "postgrestue"
authors = [
  {name = "Andrew Smith", email = "andrew@velvet.software"}
]
description = "Postgrestue is a prototype of a job queuing system using PostgreSQL"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "psycopg",
  "psycopg_pool",
  "starlette",
  "starlette-prometheus",
  "hypercorn",
  "locust",
  "prometheus-client",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-asyncio",
  "pytest-postgresql",
]

[tool.setuptools.dynamic]
version = {attr = "postgrestue.__version__"}

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
asyncio_mode = "auto"
